[metadata]
name = NetworkInformationTools
version = 0.0.1
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = NetworkInformationTools gives some information about the current used network.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/NetworkInformationTools
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = package release build management
project_urls =
    Documentation = https://github.com/anionDev/NetworkInformationTools/NetworkInformationTools/Other/Reference/ReferenceContent/index.md
    Changelog = https://github.com/anionDev/NetworkInformationTools/tree/main/Other/Resources/Changelog

[options]
packages = NetworkInformationTools
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    ScriptCollection>=3.4.1
[options.packages.find]
exclude = NetworkInformationToolsTests

[options.entry_points]
console_scripts =
    showexternalipaddress = NetworkInformationTools.Executables:ShowExternalIPAddress
